# CrimsonDesertUnpacker

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PAZ_DECRYPTION.md  README.md  TOOLS_REFERENCE.md  all_palevel_resources.csv  collect_placements.csv  factionnode_classified.csv  factionnode_translated.csv  fish_placements.csv  gamedata_coords.csv  gathering_placements.csv  herb_kudzu.csv  herb_placements.csv  herb_taro.csv  icon_mapping.csv  localization_kor.csv  lumber_placements.csv  mercury_placements.csv  mine_placements.csv  mine_placements_clean.csv  rubber_placements.csv  sulfur_placements.csv
CrimsonDesertData/0008/gamedata/: _tent_common_middle_02.binarygimmick  abyss_accelerator_big_01_parts_01.binarygimmick  abyss_artifact_0001.binarygimmick  abyss_artifact_0004.binarygimmick  abyss_artifact_box_01.binarygimmick  abyss_artifact_box_01_cover.binarygimmick  abyss_artifact_cube_01.binarygimmick  abyss_ator_dungeon_blackstone_01.binarygimmick  (+20596 more)
gui/: App.axaml  App.axaml.cs  PazGui.csproj  Program.cs  ViewLocator.cs  app.manifest
gui/Models/: PamtExtractor.cs  PamtParser.cs  PazNative.cs
gui/ViewModels/: FileTreeNodeViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
gui/Views/: MainWindow.axaml  MainWindow.axaml.cs
lib/: CryptChaCha20.cpp  CryptChaCha20.h  Lz4.cpp  Lz4.h  PamtExtractor.cpp  PamtExtractor.h  PamtFile.cpp  PamtFile.h  PazTypes.h  paz.h  paz_native.cpp  paz_native.h
python/: README.md  build_icon_mapping.py  dds_to_png.py  pabg_parse.py  palevel_extract.py  paz_unpack.py
scripts/: compress_0015.ps1  upload_gdrive.ps1
(+17345 files in other folders)
